- Print output would be clipped if the "print header" option was
  switched off.
- Fixed obscure deadlock condition in ReadWriteLock.java (Rex Young).
- The drop down box on a history text field was painted in the menu
  foreground, not the text field foreground. This could look bad if text
  field colors were customized using the "Use jEdit text area colors in
  all text components".

* Version 4.1pre5

Thanks to Axel Biernat, Chris Petersen, Eric Benoit, Fan Ho Yin, Kris
Kopicki, Marco Gotze, Ollie Rutherfurd, and Steve Snider for
contributing to this release.

+ Syntax Highlighting Changes:

- Added NQC syntax highlighting (Fan Ho Yin)
- Added Ruby-HTML syntax highlighting (Eric Benoit)
- Added Pike syntax highlighting (Marco Gotze)
- Updated C-Sharp syntax highlighting (Ollie Rutherfurd)
- Updated Perl syntax highlighting (Chris Petersen)
- Updated PL-SQL syntax highlighting (Steve Snider)
- Updated CSS syntax highlighting (Axel Biernat)
- The "More accurate syntax highlighting" option is no longer. When it
  was on, it would do the following:

  - Cause the buffer to be parsed entirely by the syntax engine when
    first loaded.
  - When parsing a line for syntax tokens, it would scan back to the
    start of the buffer looking for a line with valid syntax info,
    instead of only looking 100 lines back.

  However, the second made the first unnecessary, and with the first
  behavior gone, the performance hit is not noticable. So this option is
  now effectively always on.

+ Global Options Dialog Changes:

- The tool bar option pane now has an "Edit" button for modifying the
  currently selected tool bar entry.
- Now org.gjt.sp.jedit.gui.OptionsDialog is an abstract class, with a
  concrete org.gjt.sp.jedit.options.GlobalOptions subclass with the
  Global Options-specific code. This allows plugins to create paned
  dialog boxes similar to Global Options.
- The "Standard go to next/previous word behavior" setting has been